add paremeter to configure javac feature --enable-preview (#199)
Signed-off-by: Olivier Lamy <olamy@apache.org>